# skeletal-animation-demo

./: CMakeLists.txt  README.md  conanfile.txt
resources/: fragment.glsl  human.mesh  human.skeleton  human_idle.anim  human_running.anim  vertex.glsl
sources/: CMakeLists.txt  gl3w.c  main.cpp
sources/Animation/: AnimationClip.h  AnimationPose.h  Bone.h  BoneAnimationChannel.h  Skeleton.h
sources/Utils/: files.cpp
